Fixed github repo url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Best Packages Documentation Hub
 
 # https://squidfunk.github.io/mkdocs-material/setup/adding-a-git-repository/
-repo_url: https://github.com/Benedicht/com.tivadar.best.http.documentation
-repo_name: Tivadar/com.tivadar.best.http.documentation
+repo_url: https://github.com/Benedicht/com.tivadar.best.documentation
+repo_name: Tivadar/com.tivadar.best.documentation
 
 copyright: Copyright &copy; 2013 - 2023 Tivadar György Nagy
 
