--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,10 @@ theme:
 plugins:
     # https://squidfunk.github.io/mkdocs-material/setup/setting-up-site-search/
     - search
+    
+    # https://squidfunk.github.io/mkdocs-material/reference/images/
+    - glightbox:
+        auto_caption: true
 
     # https://github.com/byrnereese/mkdocs-minify-plugin
     - minify:
@@ -109,7 +113,11 @@ extra:
           
         - icon: fontawesome/brands/linkedin
           link: https://www.linkedin.com/in/tivadargyorgy
-          
+
+# https://squidfunk.github.io/mkdocs-material/customization/#additional-css
+extra_css:
+  - stylesheets/extra.css
+
 # Extensions
 # https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown/
 markdown_extensions:
