--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,7 +169,11 @@ markdown_extensions:
         linenums: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
-    - pymdownx.superfences
+    - pymdownx.superfences:
+        custom_fences:
+            - name: mermaid
+              class: mermaid
+              format: !!python/name:pymdownx.superfences.fence_code_format
 
     # https://squidfunk.github.io/mkdocs-material/reference/content-tabs/
     - pymdownx.tabbed:
