--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,14 +69,16 @@ theme:
         - media: "(prefers-color-scheme: light)"
           scheme: default
           primary: deep orange
+          accent: amber
           toggle:
             icon: material/brightness-7
             name: Switch to dark mode
 
         # Palette toggle for dark mode
         - media: "(prefers-color-scheme: dark)"
-          primary: brown
           scheme: slate
+          primary: brown
+          accent: deep orange
           toggle:
             icon: material/brightness-4
             name: Switch to light mode
