--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ repo_name: Tivadar/com.tivadar.best.documentation
 edit_uri: edit/main/docs/
 
 # Copyright
-copyright: Copyright &copy; 2013 - 2023 Tivadar György Nagy
+copyright: Copyright &copy; 2013 - 2023 Tivadar György Nagy<br/>This website contains affiliate links, which means I might receive a commission if you click a link and purchase something through this website. Purchasing assets through these links won’t cost you any extra money!
 
 # Configuration
 theme:
@@ -107,6 +107,7 @@ plugins:
     
 # Additional Configuration
 extra:
+    generator: false
     # https://squidfunk.github.io/mkdocs-material/setup/setting-up-the-footer/#social-links
     social:
         - icon: fontawesome/brands/mastodon
