--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ extra:
         WebSockets_off: 50
         SSE_off: 40
         Ultimate_off: 33
+        STOMP_off: 44
 
 # https://squidfunk.github.io/mkdocs-material/customization/#additional-css
 extra_css:
